# kobuki_msgs

./: .cproject  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  manifest.xml  package.xml  stack.xml
msg/: BumperEvent.msg  CliffEvent.msg  DockInfraRed.msg  KeyboardInput.msg  ScanAngle.msg  SensorState.msg  VersionInfo.msg  WheelDropEvent.msg
