<package>
  <name>kobuki_msgs</name>
  <version>0.2.1</version>
  <description>
    <p>
      Kobuki message and service types: custom messages and services for Kobuki packages.
    </p> 
  </description>
  <author email="stonier@rnd.yujinrobot.com">Daniel Stonier</author>
  <author email="younghoon.ju@rnd.yujinrobot.com">Younghoon Ju</author>
  <maintainer email="stonier@rnd.yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/kobuki_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
