<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_msgs</name>
  <version>0.7.0</version>
  <description>
    <p>
      Kobuki message and service types: custom messages and services for Kobuki packages.
    </p> 
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/kobuki_msgs</url>
  <url type="repository">https://github.com/yujinrobot/kobuki_msgs</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki_msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <!--<build_depend>actionlib_msgs</build_depend>-->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!--<exec_depend>actionlib_msgs</exec_depend>-->

  <exec_depend>ament_cmake</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
