<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_msgs</name>
  <version>0.8.0</version>
  <description>
    <p>
      Kobuki message and service types: custom messages and services for Kobuki packages.
    </p> 
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/kobuki_msgs</url>
  <url type="repository">https://github.com/yujinrobot/kobuki_msgs</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki_msgs/issues</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <!-- rosidl_cmake requires any message package be part of this group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
